Fixes issue where nav toggle overlaps nag items when right aligned on mobile devices

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1062,9 +1062,6 @@ input[type="search"]::-webkit-search-decoration {
 	.widget .extendednavigation {
 		border-bottom: none;
 	}
-	.widget .extendednavigation ul {
-		padding: 0;
-	}
 	.widget .extendednavigation ul li,
 	.widget .extendednavigation ul.align-left li {
 		padding: 0;
